feat: create/read comments; starting comments module
